<resources>
    <string name="app_name">Marvel Search API</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="marvel_search_text_input_edit_text__hint">Buscar...</string>
    <string name="marvel_search_button_go_character_list__text">Personajes</string>
    <string name="marvel_search_button_go_comics_list__text">Comics</string>
    <string name="loading_button_cancel__text">Cancelar</string>
    <string name="character_profile_text_view_comics_title__text">Lista de comics</string>
    <string name="comic_description_text_view_comics_title__text">Lista de personajes</string>
    <string name="marvel_search_image_button_go_favorite__content_description">Va a Favoritos</string>
    <string name="main_menu_search__title">Search</string>
    <string name="main_sub_toolbar_edit_text__hint">Buscar...</string>
    <string name="main_sub_toolbar_edit_text__text" />
    <string name="main_sub_toolbar_menu_search__title">Search Barra</string>
    <string name="main_sub_toolbar_menu_back__title">Anterior palabra de la busqueda</string>
    <string name="main_sub_toolbar_menu_forward__title">Siguiente palabra de la busqueda</string>
    <string name="about_me_text_view_name__text">Eliezer Delgado Román</string>
    <string name="about_me_image_view_photo__description">Mi Foto</string>
    <string name="about_me_text_view_description__text">
        EXPERIENCIA&#10;
Accenture 2 Meses&#10;
&#10;
OCT. 2022&#10;
DIC. 2022&#10;
Practica no laborales&#10;
Gestor de base de datos&#10;
&#10;
FORMACIÓN ACADÉMICA&#10;
&#10;
2023 ENSEÑANZAS DE GRADO SUPERIOR DE FORMACIÓN PROFESIONAL ESPECÍFICA Y EQUIVALENTES, ARTES PLÁSTICAS Y DISEÑO Y DEPORTIVAS - TÉCNICO SUPERIOR EN DESARROLLO DE APLICACIONES&#10;
MULTIPLATAFORMA&#10;
&#10;
EN IES Portada Alta&#10;
&#10;
FORMACIÓN COMPLEMENTARIA&#10;
&#10;
PROGRAMACIÓN DE APLICACIONES&#10;
MÓVILES ANDROID TOKIO SCHOOL&#10;
&#10;
https://www.tokioschool.com/formaciones/cursos-programacion/android/
&#10;
CAPACIDADES Y COMPETENCIAS&#10;
&#10;
CONOCIMIENTOS DE INFORMÁTICA:&#10;
C#,Java, kotlin&#10;
Lengua(s) extranjera(s):&#10;
&#10;
IDIOMAS&#10;
&#10;
INGLÉS B1&#10;
&#10;
        MI INFORMACION&#10;
Fecha de Nacimiento: 05/diciembre/2000&#10;
Correo electrónico: delgadoeliezer05@gmail.com&#10;
Sexo: Hombre&#10;
&#10;
PREFERENCIAS LABORALES&#10;
Tipo de jornada: INDIFERENTE&#10;
Android Studio,unity (juegos), intellij, Visual studio 2018 (aplicaccionesWPF,consola),libre office,word, excel xml, html&#10;
OTRAS HABILIDADES ADQUIRIDAS:&#10;
Trabajar en equipo, Aprender rápido, Seguir instruccione,&#10;
Capacidad analítica&#10;
DISPONIBILIDAD PARA VIAJAR:&#10;
No posees disponibilidad para viajar&#10;
    </string>
    <string name="favorite_toolbar_menu_reload__title">Reload</string>
    <string name="alert_dialog_user_information_text_view_name__text">Nombre</string>
    <string name="alert_dialog_user_information_text_view_email__text">Correo</string>
    <string name="alert_dialog_user_information_button_sign_out__text">Cerrar Sesión</string>
    <string name="alert_dialog_user_information_button_close__contentDescription">Close Button</string>
    <string name="alert_dialog_message_text_view_message__text">Mensaje</string>
    <string name="positive_button_error_name">Ok</string>
    <string name="warning_size_list_search_is_0">No se ha encontrado nada</string>
    <string name="warning_not_network">No hay conexion a internet</string>
    <string name="error_empty_search">Por favor no lo dejes vacio</string>
    <string name="warning_user_should_log_in">Inicie sesion para añadirlo a favorito</string>
    <string name="error_no_internet">No hay acceso a  internet</string>
</resources>