<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.about_me.AboutMeFragment"
    tools:ignore="ScrollViewCount">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        tools:context=".ui.fragments.about_me.AboutMeFragment">
    <TextView
        android:id="@+id/about_me_text_view_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/EliezerMarvel.TextView.Title"
        android:text="@string/about_me_text_view_name__text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <ImageView
        android:id="@+id/about_me_image_view_photo"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:contentDescription="@string/about_me_image_view_photo__description"
        android:src="@drawable/my_photo"
        app:layout_constraintTop_toBottomOf="@+id/about_me_text_view_name"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

        <TextView
            android:id="@+id/about_me_text_view_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/EliezerMarvel.TextView.Body"
            android:text="@string/about_me_text_view_description__text"
            app:layout_constraintTop_toBottomOf="@+id/about_me_image_view_photo"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>