<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".feature.marvel_search.MarvelSearchFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/marvel_search_image_view_logo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:src="@drawable/marvel_logo"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/marvel_search_text_input_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/marvel_search_text_input_edit_text__hint" />
    </com.google.android.material.textfield.TextInputLayout>
    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/marvel_search_button_go_character_list"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marvel_search_button_go_character_list__text"
            android:layout_marginHorizontal="10dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/marvel_search_button_go_comics_list"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marvel_search_button_go_comics_list__text"
            android:layout_marginHorizontal="10dp"/>
    </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>